Flip cards done, fixed issue where nav causes body to jump

--- a/components.css
+++ b/components.css
@@ -37,16 +37,19 @@
   box-shadow: 0 -2px 5px rgba(0,0,0,.32);
 }
 
-.flip-card {
-  background:  #cfd8dc;
-  border: 1px solid #cfd8dc;
+/* ---- flip card ---- */
+.flip-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #b0bec5;
   border-radius: 8px;
   height: 20vw;
+  padding: .5em;
   width: 25vw;
 }
 
 .flip-container {
-  background:  #cfd8dc;
 	perspective: 1000px;
 }
 
