--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,17 +18,29 @@ body {
   background-color: #ede7f6;
 }
 
+.flip-content-img {
+  width: auto;
+  height: 100%;
+}
 .feature-view {
   align-items: center;
   display: flex;
   flex-direction: column;
   height: 100vh;
   justify-content: center;
-  padding-top: 20vh;
 }
 
 .feature-label {
   font-size: 2em;
+  margin-bottom: 1em;
+}
+
+.flip-cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 2em;
+  width: 60vw;
 }
 
 .github-img {
